<resources>
    <string name="app_name">Homework5</string>
    <string name="firstname_label">Firstname:</string>
    <string name="firstname_hint">Firstname</string>
    <string name="lastname_label">Lastname:</string>
    <string name="lastname_hint">Lastname</string>
    <string name="number_label">Number:</string>
    <string name="number_hint">Number</string>
    <string name="save_btn_label">SAVE</string>
</resources>